--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "i": "^0.3.7",
     "next": "16.0.0-beta.0",
+    "npm": "^11.6.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-superellipse": "^0.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
